--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
+        <import type="org.gmetais.downloadmanager.StructuresKt" />
+        <variable
+            name="browser"
+            type="org.gmetais.downloadmanager.BrowserAdapter.IBrowser" />
         <variable
             name="file"
             type="org.gmetais.downloadmanager.File" />
     </data>
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:clickable="@{file.IsDir}"
+        android:onClick="@{(v) -> browser.browse(file.Path)}">
 
         <ImageView
             android:id="@+id/item_icon"
@@ -24,6 +30,6 @@
             app:layout_constraintStart_toEndOf="@+id/item_icon"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center_vertical"
-            android:text="@{file.Path}"/>
+            android:text="@{StructuresKt.getNameFromPath(file.Path)}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
