--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
-        <import type="org.gmetais.downloadmanager.StructuresKt" />
+        <import type="org.gmetais.downloadmanager.HelpersKt" />
         <variable
             name="browser"
             type="org.gmetais.downloadmanager.BrowserAdapter.IHandler" />
@@ -30,6 +30,6 @@
             app:layout_constraintStart_toEndOf="@+id/item_icon"
             app:layout_constraintEnd_toEndOf="parent"
             android:gravity="center_vertical"
-            android:text="@{StructuresKt.getNameFromPath(file.path)}"/>
+            android:text="@{HelpersKt.getNameFromPath(file.path)}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
