--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.gmetais.downloadmanager.MainActivity"
-    android:background="@color/colorAccent">
+    android:background="@color/background">
 
     <FrameLayout
         android:id="@+id/fragment_placeholder"
