--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -12,8 +12,8 @@
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:clickable="@{file.isDirectory}"
-        android:onClick="@{(v) -> browser.open(file.path)}">
+        android:clickable="true"
+        android:onClick="@{(v) -> browser.open(file)}">
 
         <ImageView
             android:id="@+id/item_icon"
