--- a/app/src/main/res/layout/share_item.xml
+++ b/app/src/main/res/layout/share_item.xml
@@ -13,22 +13,22 @@
         android:layout_height="wrap_content"
         android:clickable="true"
         android:onClick="@{(v) -> handler.open(item)}">
-
-        <ImageView
-            android:id="@+id/item_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/ic_file"/>
         <TextView
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/item_icon"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/item_delete_icon"
             android:gravity="center_vertical"
             android:text="@{item.name}"/>
+        <ImageView
+            android:id="@+id/item_delete_icon"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/ic_delete_forever"
+            android:onClick="@{(v) -> handler.delete(item)}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
