--- a/app/src/main/res/layout/share_item.xml
+++ b/app/src/main/res/layout/share_item.xml
@@ -12,7 +12,10 @@
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:onClick="@{(v) -> handler.open(item)}">
+        android:focusable="true"
+        android:onClick="@{(v) -> handler.open(item)}"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" >
         <TextView
             android:id="@+id/item_name"
             android:layout_width="0dp"
@@ -21,14 +24,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/item_delete_icon"
+            android:textSize="18sp"
             android:gravity="center_vertical"
             android:text="@{item.name}"/>
         <ImageView
             android:id="@+id/item_delete_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/ic_delete_forever"
+            android:layout_marginEnd="4dp"
+            android:src="@drawable/ic_remove_circle"
             android:onClick="@{(v) -> handler.delete(item)}"/>
     </android.support.constraint.ConstraintLayout>
 </layout>
