--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -7,7 +7,7 @@
             type="org.gmetais.downloadmanager.adapters.BrowserAdapter.IHandler" />
         <variable
             name="file"
-            type="org.gmetais.downloadmanager.File" />
+            type="org.gmetais.downloadmanager.data.File" />
     </data>
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
