Move UI classes to UI package

--- a/app/src/main/res/layout/dialog_link_creator.xml
+++ b/app/src/main/res/layout/dialog_link_creator.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="handler"
-            type="org.gmetais.downloadmanager.LinkCreatorDialog.ClickHandler" />
+            type="org.gmetais.downloadmanager.ui.LinkCreatorDialog.ClickHandler" />
         <variable
             name="title"
             type="String" />
