Move adapters into UI package

--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -4,7 +4,7 @@
         <import type="org.gmetais.downloadmanager.HelpersKt" />
         <variable
             name="handler"
-            type="org.gmetais.downloadmanager.adapters.BrowserAdapter.IHandler" />
+            type="org.gmetais.downloadmanager.ui.adapters.BrowserAdapter.IHandler" />
         <variable
             name="item"
             type="org.gmetais.downloadmanager.data.File" />
