--- a/app/src/main/res/layout/share_item.xml
+++ b/app/src/main/res/layout/share_item.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="handler"
-            type="org.gmetais.downloadmanager.adapters.SharesAdapter.ShareHandler" />
+            type="org.gmetais.downloadmanager.ui.adapters.SharesAdapter.ShareHandler" />
         <variable
             name="item"
             type="org.gmetais.downloadmanager.data.SharedFile" />
