Refine path items

--- a/app/src/main/res/layout/browser.xml
+++ b/app/src/main/res/layout/browser.xml
@@ -8,8 +8,7 @@
             android:id="@+id/ariane"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginStart="8dp"
+            android:layout_margin="8dp"
             android:visibility="gone"
             android:layout_marginLeft="8dp" />
         <android.support.v4.widget.SwipeRefreshLayout
