--- a/app/src/main/res/layout/path_item.xml
+++ b/app/src/main/res/layout/path_item.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="8dp"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
-    android:gravity="center"
+    android:gravity="center_vertical"
     android:background="@drawable/rounded_bg"
     android:textColor="@color/grey50"
     tools:text="folder"/>
