--- a/app/src/main/res/layout/path_item.xml
+++ b/app/src/main/res/layout/path_item.xml
@@ -6,9 +6,8 @@
     android:layout_height="24dp"
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginLeft="8dp"
     android:paddingLeft="4dp"
     android:paddingRight="4dp"
-    android:gravity="center_vertical"
-    android:background="@drawable/rounded_bg"
-    android:textColor="@color/grey50"
     tools:text="folder"/>
