--- a/app/src/main/res/layout/dialog_link_creator.xml
+++ b/app/src/main/res/layout/dialog_link_creator.xml
@@ -8,7 +8,7 @@
             name="title"
             type="String" />
     </data>
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="16dp"
@@ -24,7 +24,7 @@
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
             android:textColor="@color/colorPrimary"
             android:text="@{@string/create_download_link_for(title)}"/>
-        <android.support.design.widget.TextInputLayout
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/input_layout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -43,7 +43,7 @@
                 android:maxLines="1"
                 android:inputType="text"
                 android:imeOptions="actionSend"/>
-        </android.support.design.widget.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
         <Button
             android:id="@+id/link_action"
             android:layout_width="wrap_content"
@@ -55,5 +55,5 @@
             android:textColor="@color/colorPrimary"
             style="?android:attr/borderlessButtonStyle"
             android:onClick="@{() -> handler.onClick()}"/>
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
