--- a/app/src/main/res/layout/browser_item.xml
+++ b/app/src/main/res/layout/browser_item.xml
@@ -1,37 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <import type="org.gmetais.downloadmanager.HelpersKt" />
-        <variable
-            name="handler"
-            type="org.gmetais.downloadmanager.ui.adapters.BrowserAdapter.IHandler" />
-        <variable
-            name="item"
-            type="org.gmetais.downloadmanager.data.File" />
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="true"
-        android:focusable="true"
-        android:onClick="@{(v) -> handler.open(item)}">
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clickable="true"
+    android:focusable="true"
+    android:onClick="@{(v) -> handler.open(item)}">
 
-        <ImageView
-            android:id="@+id/item_icon"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@{item.isDirectory ? @drawable/ic_folder : @drawable/ic_file}"/>
-        <TextView
-            android:id="@+id/item_name"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/item_icon"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:maxLines="2"
-            android:gravity="center_vertical"
-            android:text="@{HelpersKt.getNameFromPath(item.path)}"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+    <ImageView
+        android:id="@+id/item_icon"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        app:layout_constraintStart_toStartOf="parent"/>
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/item_icon"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:maxLines="2"
+        android:gravity="center_vertical"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
