--- a/app/src/main/res/layout/share_item.xml
+++ b/app/src/main/res/layout/share_item.xml
@@ -1,46 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <import type="org.gmetais.downloadmanager.NetworkHelper" />
-        <variable
-            name="handler"
-            type="org.gmetais.downloadmanager.ui.adapters.SharesAdapter.ShareHandler" />
-        <variable
-            name="item"
-            type="org.gmetais.downloadmanager.data.SharedFile" />
-        <variable
-            name="connected"
-            type="androidx.lifecycle.LiveData&lt;Boolean>" />
-    </data>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clickable="@{safeUnbox(connected)}"
-        android:focusable="true"
-        android:onClick="@{(v) -> handler.open(item)}"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp" >
-        <TextView
-            android:id="@+id/item_name"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/item_delete_icon"
-            android:textSize="18sp"
-            android:gravity="center_vertical"
-            android:text="@{item.name}"/>
-        <ImageView
-            android:id="@+id/item_delete_icon"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/ic_remove_circle"
-            android:onClick="@{(v) -> handler.delete(item)}"
-            android:clickable="@{safeUnbox(connected)}" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</layout>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:focusable="true"
+    android:layout_marginTop="16dp"
+    android:layout_marginBottom="16dp" >
+    <TextView
+        android:id="@+id/item_name"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/item_delete_icon"
+        android:textSize="18sp"
+        android:gravity="center_vertical" />
+    <ImageView
+        android:id="@+id/item_delete_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:srcCompat="@drawable/ic_remove_circle" />
+</androidx.constraintlayout.widget.ConstraintLayout>
